# PerfumeDecantsBD

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  pyrightconfig.json
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/src/: __init__.py  main.py
backend/src/core/: config.py  database.py  dependencies.py  exceptions.py  middleware.py  pagination.py  security.py
backend/src/modules/ai_insights/: __init__.py  router.py
backend/src/modules/analytics/: router.py
backend/src/modules/auth/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/modules/cart/: __init__.py  models.py  router.py
backend/src/modules/discounts/: __init__.py  models.py
backend/src/modules/inventory/: __init__.py  models.py
backend/src/modules/notifications/: __init__.py  models.py
backend/src/modules/orders/: __init__.py  models.py  repository.py  router.py  schemas.py
backend/src/modules/products/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/modules/reports/: __init__.py  models.py  router.py
backend/src/modules/reviews/: __init__.py  models.py
backend/src/seeds/: seed_data.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: app.css
frontend/src/lib/components/layout/: Footer.svelte  Navbar.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/cart/: +page.svelte
frontend/src/routes/checkout/: +page.svelte
frontend/src/routes/products/: +page.svelte
(+3 files in other folders)
